qt: Add missing include of config.h

* lang/qt/src/util.cpp: Include config.h.
--

GnuPG-bug-id: 5871